redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    role: master
  name: redis-master
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: redis-server
  selector:
    app: redis
    role: master
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    role: slave
  name: redis-slave
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: redis-server
  selector:
    app: redis
    role: slave
  sessionAffinity: None
  type: ClusterIP
