ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/subnets: 'subnet-0e31da57fb237ae5b,subnet-0e4e0e0e7e89c305f,subnet-0d30dfde14069a52a'
    alb.ingress.kubernetes.io/security-groups: 'sg-02a0485a06f8b36eb'
    alb.ingress.kubernetes.io/certificate-arn: 'LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNE1UQXdPVEEzTWpnek1sb1hEVEk0TVRBd05qQTNNamd6TWxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTmFjCmVOMXdrcnZzYUZGRmJYbUhuYmU5cStoenIxa3EyM3pBMlZpU2lUMXIzWElPZ3pvTlREcmFFSzBZVTVWamRlTWMKWitsNkFUMDJMVkZraXJnSDQzZ2g3Tm9kc1FHeUZwOWcrbFhoeldpTlFGZWxhVDhzS2w2 [...]
spec:
  tls:
  - hosts:
     - kuard.marekbartik.com
     - guestbook.marekbartik.com
    secretName: router-tls
  rules:
  - host: kuard.marekbartik.com
    http:
      paths:
      - backend:
          serviceName: kuard
          servicePort: 80
        path: /*

  - host: guestbook.marekbartik.com
    http:
      paths:
      - backend:
          serviceName: guestbook-v2
          servicePort: 80
        path: /*
